Resumo das modificações recentes

1) Histórico de depósitos/saques
- Adicionados métodos: 
  - src/Services/Authenticated/BitfinexAuthenticatedAccountAction.php
    - depositHistory(string $currency, $start = null, $end = null, ?int $limit = null)
    - withdrawalHistory(string $currency, $start = null, $end = null, ?int $limit = null)
- Atualizado:
  - movements(...): agora aceita filtros opcionais (start, end, limit).
- Transformadores de resposta:
  - src/Http/Responses/AuthenticatedBitfinexResponse.php
    - novos: depositHistory(), withdrawalHistory()

2) Documentação
- docs/USAGE.md: adicionada seção “Authenticated Endpoints” com exemplos de:
  - Credenciais (Facade e vanilla PHP)
  - depositAddress / depositAddressList
  - movements / depositHistory / withdrawalHistory (+ filtros)
  - movementInfo

3) Testes
- tests/Pest.php: passou a usar Tests\\TestCase para a suíte Feature.

4) Composer (melhorias para pacote Laravel)
- composer.json (scripts):
  - clear: remove phpunit.result.cache
  - test:feature e test:unit

5) Itens revertidos/removidos
- Removido AGENTS.md a pedido do usuário.

Observações/sugestões
- Considerar adicionar parâmetro sort (+1/-1) aos métodos de histórico.
- Implementar os TODOs: withdrawal() e generateInvoice().
- Avaliar correção de possível typo em .editorconfig (linha de json/yaml).